# multi-modal-ai-research-assistant

./: .gitignore  create_database.py  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/core/: audio_processor.py  rag_engine.py  summarizer.py  transciber.py  vector_store.py
backend/routes/: audio_routes.py  chat_routes.py  pdf_routes.py  system_routes.py
backend/services/: audio_service.py  chatbot_service.py  pdf_service.py
frontend/: app.py
